Prevents scrollbar from showing because of new borders

--- a/exercicio.css
+++ b/exercicio.css
@@ -127,3 +127,7 @@
  .parar {
    background-position: 0 24px;
  }
+
+figure {
+    box-sizing: border-box;
+}
